# vitak-strike-gunshot-detector

./: README.md  init.sh  pyproject.toml
src/vital-strike-gunshoot-detector/: convert_to_tflite.py  extract_features.py  train_model.py
